--- a/model_making/notebooks/audio_models.ipynb
+++ b/model_making/notebooks/audio_models.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple ANNs"
+    "## Simple CNNs"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "source": [
     "def create_model_1(input_shape, num_classes=6, is_training=True):\n",
     "    # Build the model step-by-step\n",
-    "    model = keras.Sequential(name='ANN1')\n",
+    "    model = keras.Sequential(name='CNN1')\n",
     "    \n",
     "    # Input layer\n",
     "    model.add(keras.layers.InputLayer(input_shape=input_shape))\n",
@@ -166,7 +166,7 @@
    "source": [
     "# Reduced complexity for faster training and smaller size\n",
     "def create_model_2(input_shape, num_classes=6, is_training=True):\n",
-    "    model = keras.Sequential(name='ANN2')\n",
+    "    model = keras.Sequential(name='CNN2')\n",
     "\n",
     "    model.add(keras.layers.Input(shape=input_shape))\n",
     "\n",
